5275: Added level 3 trees tests and improvements and improved exception